--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,13 @@ services:
   text2audio:
     build: .
     ports:
+      - "8000:8000"    # API
       - "8501:8501"
     environment:
       # Forward these to tweak Streamlit or your app without rebuilding
       STREAMLIT_SERVER_HEADLESS: "true"
       STREAMLIT_SERVER_ADDRESS: "0.0.0.0"
       STREAMLIT_SERVER_PORT: "8501"
+      OUTPUT_DIR: /data
     volumes:
-      # Mount a host folder to persist outputs/models if your app writes files
-      - ./data:/app/data
-      # (Optional) cache mounts for Hugging Face or pip if you add more backends
-      # - ~/.cache/huggingface:/root/.cache/huggingface
+      - ./output:/data
