--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,37 @@
+# Core backends
 gTTS==2.5.3
 pyttsx3==2.90
 pydub==0.25.1
+
+# Web UI
 streamlit==1.38.0
-piper-tts>=1.2.0,<2
-onnxruntime>=1.17.0,<2
-piper-phonemize
-requests>=2.32.0
-pdfminer.six
-docx2txt
-pytesseract
-pdf2image
-Pillow
+
+# Piper TTS stack
+piper-tts==1.3.0
+piper-phonemize==1.1.0
+onnxruntime==1.22.1
+numpy==2.3.2
+
+# API
+fastapi==0.116.1
+uvicorn==0.35.0
+python-multipart==0.0.20
+requests==2.32.5
+
+# File → text extraction
+pdfminer.six==20250506
+docx2txt==0.9
+pytesseract==0.3.13
+pdf2image==1.17.0
+pillow==10.4.0
+
+# Data utils
+pandas==2.3.2
+
+# Optional UI niceties / infra
+coloredlogs==15.0.1
+GitPython==3.1.45
+
+# Explicit versions for key libs (from freeze)
+protobuf==5.29.5
+typing_extensions==4.15.0
